# videotrans

./: .gitignore  PRD_VideoTransDub.md  README.md  cell6_gradio.py  colab_pyvideotrans.ipynb  colab_videotransdub.ipynb  log.txt  requirements-win-gpu.txt  run_videotransdub_ui.bat
.omx/: metrics.json
apps/videotransdub/: GUIDE.md  README.md  install_deps.sh  pyproject.toml  setup.py
apps/videotransdub/configs/: default.yaml
apps/videotransdub/configs/presets/: balanced.yaml  fast_free.yaml  mock.yaml  mock_voice_over.yaml  quality_api.yaml  qwen_asr_free.yaml  qwen_free.yaml  qwen_voice_over.yaml  real_free.yaml
apps/videotransdub/notebooks/: videotransdub_colab.ipynb
apps/videotransdub/src/videotransdub/: __init__.py  api.py  app.py  checkpoint.py  cli.py  diagnostics.py  launch.py  logging.py  models.py  orchestrator.py  registry.py  settings.py  workspace.py
apps/videotransdub/src/videotransdub/engines/asr/: base.py  mock_engine.py  pyvideotrans_engine.py  qwen_engine.py  whisper_engine.py
apps/videotransdub/src/videotransdub/engines/inpaint/: base.py  opencv_engine.py  passthrough_engine.py
apps/videotransdub/src/videotransdub/stages/: asr.py  audio_mix.py  audio_sync.py  base.py  finalize.py  preprocess.py  translate.py  tts.py  video.py
apps/videotransdub/src/videotransdub/utils/: commands.py  srt.py  voice_over.py
apps/videotransdub/tests/: test_config.py  test_diagnostics.py  test_finalize_stage.py  test_launch.py  test_pipeline.py  test_qwen_engine.py  test_registry.py  test_upstream_commands.py  test_video_stage.py  test_voice_over.py
(+19 files in other folders)
